--- a/Client/index.html
+++ b/Client/index.html
@@ -6,7 +6,6 @@
     <title>client</title>
   </head>
   <body>
-    <div id="app">vue的主键</div>
-    <!-- built files will be auto injected -->
+  <div id="app"></div>
   </body>
 </html>
